# english_vocab_strorage

./: .gitignore  CMakeLists.txt  DATA.json  config.xml  vocabulary.json
config/: config.xml
installer/config/: config.xml
src/data/: addvocab.cpp  addvocab.h  getvocab.cpp  getvocab.h
src/gui/: mainwindow.cpp  mainwindow.h
src/setting/: settings.cpp  settings.h
